--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react-dom": "19.0.0",
     "react-native-web": "^0.20.0",
     "@expo/metro-runtime": "~5.0.4",
-    "react-native-maps": "1.20.1"
+    "react-native-maps": "1.20.1",
+    "expo-location": "~18.1.5",
+    "expo-linear-gradient": "~14.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
