--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@expo/metro-runtime": "~5.0.4",
     "react-native-maps": "1.20.1",
     "expo-location": "~18.1.5",
-    "expo-linear-gradient": "~14.1.5"
+    "expo-linear-gradient": "~14.1.5",
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
