--- a/package.json
+++ b/package.json
@@ -10,25 +10,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/native": "^7.1.12",
+    "@expo/metro-runtime": "~5.0.4",
+    "@react-navigation/bottom-tabs": "^7.4.2",
+    "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.17",
     "@react-navigation/stack": "^7.3.5",
     "expo": "~53.0.12",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-location": "~18.1.5",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.4",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.5",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-maps": "1.20.1",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-svg": "^15.12.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-dom": "19.0.0",
     "react-native-web": "^0.20.0",
-    "@expo/metro-runtime": "~5.0.4",
-    "react-native-maps": "1.20.1",
-    "expo-location": "~18.1.5",
-    "expo-linear-gradient": "~14.1.5",
     "react-native-webview": "13.13.5"
   },
   "devDependencies": {
