--- a/app.json
+++ b/app.json
@@ -4,11 +4,11 @@
     "slug": "SkyCast",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/SkyCast-logo-round.png",
+    "icon": "../assets/SkyCast-logo-round.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/SkyCast-logo-round.png",
+      "image": "../assets/SkyCast-logo-round.png",
       "resizeMode": "contain",
       "backgroundColor": "transparent"
     },
@@ -17,13 +17,13 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/SkyCast-logo-round.png",
+        "foregroundImage": "../assets/SkyCast-logo-round.png",
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true
     },
     "web": {
-      "favicon": "./assets/SkyCast-logo-round.png"
+      "favicon": "../assets/SkyCast-logo-round.png"
     }
   }
 }
