--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "expo": "~53.0.12",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.4",
+    "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~3.17.4",
@@ -29,7 +29,8 @@
     "react-native-maps": "1.20.1",
     "expo-location": "~18.1.5",
     "expo-linear-gradient": "~14.1.5",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "lottie-react-native": "7.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
