--- a/package.json
+++ b/package.json
@@ -10,27 +10,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~5.0.4",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/native": "^7.1.12",
     "@react-navigation/native-stack": "^7.3.17",
     "@react-navigation/stack": "^7.3.5",
     "expo": "~53.0.12",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-location": "~18.1.5",
+    "expo-notifications": "~0.31.4",
     "expo-status-bar": "~2.2.3",
+    "lottie-react-native": "7.2.2",
     "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-maps": "1.20.1",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-vector-icons": "^10.2.0",
-    "react-dom": "19.0.0",
     "react-native-web": "^0.20.0",
-    "@expo/metro-runtime": "~5.0.4",
-    "react-native-maps": "1.20.1",
-    "expo-location": "~18.1.5",
-    "expo-linear-gradient": "~14.1.5",
-    "react-native-webview": "13.13.5",
-    "lottie-react-native": "7.2.2"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
